Add get request APIs for user data and city data

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
 micronaut:
   application:
     name: cityfetcher
+    scan:
+      packages:
+        - sahaj.ai.repositories
+        - sahaj.ai.controllers
